<?xml version="1.0"?>
<package format="2">
  <name>mbf_recovery_behaviors</name>
  <version>0.1.0</version>
  <description>The mbf_recovery_behaviors package</description>

  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>


  <license>BSD-3</license>

  <author email="spuetz@uos.de">Sebastian Pütz</author>

  <exec_depend>moveback_recovery</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
