<?xml version="1.0"?>
<package format="2">
    <name>moveback_recovery</name>
    <version>0.0.0</version>
    <description>
        This package provides a simple recovery behavior for Move Base Flex which moves back a specified length
    </description>
    <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
    <author email="fistutzenste@uos.de">Finn Stutzenstein</author>

    <license>3-Clause BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>tf2_ros</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>mbf_msgs</build_depend>
    <build_depend>mbf_costmap_core</build_depend>
    


    <exec_depend>roscpp</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>costmap_2d</exec_depend>
    <exec_depend>pluginlib</exec_depend>
    <exec_depend>mbf_msgs</exec_depend>
    <exec_depend>mbf_costmap_core</exec_depend>

    <export>
        <mbf_costmap_core plugin="${prefix}/moveback_recovery_plugin.xml" />
    </export>

</package>
